# pac_repo

./: .gitignore  INSTRUCTIONS.txt  Makefile  README.md  config.json  constant.py  highscores.json  log_error.txt  mazegen-0.1.0-py3-none-any.whl  mazegen-1.0.0-py3-none-any.whl  pac-man.py  pac-man.spec  pyproject.toml
management/: management.md
src/: assets_manager.py  entities.py  enums_class.py  game_engine.py  game_engine_2.py  highscores.py  loader.py  map_generator.py  models.py
