[project]
name = "pac-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mazegen",
    "mypy>=1.19.1",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "pygame-ce>=2.5.6",
]

[tool.uv.sources]
mazegen = { path = "mazegen-1.0.0-py3-none-any.whl" }
